# idp-sgd

./: README.md  pyproject.toml
idp_sgd/: cli.py
opacus/: conftest.py  dev_requirements.txt  pyproject.toml
opacus/opacus/: README.md  __init__.py  data_loader.py  distributed.py  lightning.py  privacy_engine.py  scheduler.py  version.py
opacus/opacus/accountants/: __init__.py  accountant.py  gdp.py  idp.py  prv.py  rdp.py  utils.py
opacus/opacus/grad_sample/: README.md  __init__.py  conv.py  dp_multihead_attention.py  dp_rnn.py  embedding.py  functorch.py  grad_sample_module.py  group_norm.py  gsm_base.py  gsm_exp_weights.py  gsm_no_op.py  instance_norm.py  layer_norm.py  linear.py  utils.py
opacus/opacus/layers/: __init__.py  dp_multihead_attention.py  dp_rnn.py  param_rename.py
opacus/opacus/optimizers/: __init__.py  adaclipoptimizer.py  ddp_perlayeroptimizer.py  ddpoptimizer.py  optimizer.py  perlayeroptimizer.py  utils.py
opacus/opacus/scripts/: compute_dp_sgd_privacy.py
opacus/opacus/tests/: accountants_test.py  batch_memory_manager_test.py  ddp_hook_check.py  distributed_poisson_test.py  dpdataloader_test.py  grad_sample_module_test.py  gradient_accumulation_test.py  module_validator_test.py  multigpu_gradcheck.py  poisson_test.py  privacy_engine_test.py  privacy_engine_validation_test.py  randomness_test.py  scheduler_test.py
opacus/opacus/utils/: batch_memory_manager.py  module_utils.py  packed_sequences.py  tensor_utils.py  uniform_sampler.py  weighted_sampler.py
opacus/scripts/: install_via_pip.sh  pytorch_install.ps1  pytorch_install.sh
(+50 files in other folders)
