[tool.poetry]
name = "idp-sgd"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [
            {include = "idp_sgd"},
]

[tool.poetry.scripts]
idp-sgd = "idp_sgd.cli:cli"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.20.0"
pandas = "^1.4.3"
matplotlib = "^3.5.3"
plotly = "^5.10.0"
jupyter = "^1.0.0"
seaborn = "^0.11.2"
scikit-learn = "^1.1.2"
click = "^8.1.3"
torch = "^1.13.0"
torchvision = "^0.14.0"



[tool.poetry.group.dev.dependencies]
opacus= { path = "opacus/",develop = true}


black = "^22.6.0"
bpython = "^0.22.1"
yapf = "^0.32.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
